# dg6502

./: Cargo.toml  notes.org  test-results-3.11.txt
src/: bus.rs  cpu.rs  cpu_tests.rs  lib.rs  main.rs  scratch
test_exe/: 6502_functional_test.a65  6502_functional_test.lst
test_json/: c0.json
