[package]
name = "dg6502"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ndarray = "0.15.6"
strum="0.24.1"
strum_macros = "0.24.3"
serde_json = "1.0.88"
serde = { version="1.0.147", features = [ "derive" ] }