[package]
name = "dg6502"
description="A 6502 emulator."
repository="https://github.com/tech0tron/dg6502"
license="MIT"
keywords=["gamedev", "emulator", "mos6502"]
authors=["Michael Brennan"]
categories=["emulators"]
version = "0.1.0"
edition = "2021"
exclude=["test_rom/", "test_json/"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0.88"
serde = { version="1.0.147", features = [ "derive" ] }
crossterm = "0.26.1"
